[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/UI/Update_Hands.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/QE_Lasso.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/QE_Punch.png" type="Texture" id=3]
[ext_resource path="res://Sounds/quick_equip_select_02.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/quick_equip_exit.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/quick_equip.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/quick_equip_select_01.wav" type="AudioStream" id=7]
[ext_resource path="res://Sprites/UI/QE_RPS.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/QE_Build.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/QE_Charm.png" type="Texture" id=10]
[ext_resource path="res://Sprites/UI/QE_Guard.png" type="Texture" id=11]
[ext_resource path="res://Sprites/UI/QE_Null.png" type="Texture" id=12]

[node name="Update_Hands" type="Control" groups=[
"UICustom",
]]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
sfx = [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 4 ) ]
spellIcons = {
"Build": ExtResource( 9 ),
"Charm": ExtResource( 10 ),
"Guard": ExtResource( 11 ),
"Lasso": ExtResource( 2 ),
"Null": ExtResource( 12 ),
"Punch": ExtResource( 3 ),
"RPS": ExtResource( 8 )
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0.0235294, 0.270588, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftHand" type="TextureButton" parent="container"]
margin_left = 256.0
margin_top = 192.0
margin_right = 384.0
margin_bottom = 320.0
mouse_filter = 1
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightHand" type="TextureButton" parent="container"]
margin_left = 640.0
margin_top = 192.0
margin_right = 768.0
margin_bottom = 320.0
mouse_filter = 1
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="container/LeftHand" to="." method="select_left_hand"]
[connection signal="pressed" from="container/RightHand" to="." method="select_right_hand"]
